--- a/docs/docs/03-Input/02-Simple/02-API.mdx
+++ b/docs/docs/03-Input/02-Simple/02-API.mdx
@@ -38,6 +38,7 @@ type model struct {
 	textInput   *simpleinput.Model[any]
 	outputStyle lipgloss.Style
 	numChoices  int64
+	filterer    completer.Filterer[any]
 }
 
 func (m model) Complete(promptModel prompt.Model[any]) ([]suggestion.Suggestion[any], error) {
@@ -45,7 +46,7 @@ func (m model) Complete(promptModel prompt.Model[any]) ([]suggestion.Suggestion[
 		return nil, nil
 	}
 
-	return completer.FilterHasPrefix(m.textInput.CurrentTokenBeforeCursor(), m.suggestions), nil
+	return m.filterer.Filter(m.textInput.CurrentTokenBeforeCursor(), m.suggestions), nil
 }
 
 func (m model) Execute(input string, promptModel *prompt.Model[any]) (tea.Model, error) {
@@ -90,6 +91,7 @@ func main() {
 		textInput:   textInput,
 		// Add some coloring to the foreground of our output to make it look pretty
 		outputStyle: lipgloss.NewStyle().Foreground(lipgloss.Color("13")),
+		filterer:    completer.NewPrefixFilter[any](),
 	}
 
 	// Create the Bubbleprompt model
