--- a/docs/docs/03-Input/03-Command/02-API.mdx
+++ b/docs/docs/03-Input/03-Command/02-API.mdx
@@ -49,6 +49,7 @@ type model struct {
 	textInput          *commandinput.Model[cmdMetadata]
 	secret             string
 	executorValueStyle lipgloss.Style
+	filterer           completer.RecursiveFilterer[cmdMetadata]
 }
 
 func (m model) Complete(
@@ -71,7 +72,7 @@ func (m model) Complete(
 			nil,
 		), nil
 	}
-	return completer.GetRecursiveSuggestions(
+	return m.filterer.GetRecursiveSuggestions(
 		m.textInput.Tokens(),
 		m.textInput.CursorIndex(),
 		m.suggestions,
@@ -196,6 +197,7 @@ func main() {
 		textInput:          textInput,
 		secret:             "hunter2",
 		executorValueStyle: lipgloss.NewStyle().Foreground(lipgloss.Color("13")),
+		filterer:           completer.NewRecursiveFilterer[cmdMetadata](),
 	}
 
 	promptModel := prompt.New[cmdMetadata](
