--- a/docs/docs/03-Prompt/02-API.mdx
+++ b/docs/docs/03-Prompt/02-API.mdx
@@ -31,13 +31,13 @@ import "github.com/aschey/bubbleprompt"
   - [func WithViewportRenderer[T any](opts ...renderer.Option) Option[T]](<#func-withviewportrenderer>)
 
 
-## func [MsgFilter](<https://github.com/aschey/bubbleprompt/blob/main/prompt.go#L92>)
+## func [MsgFilter](<https://github.com/aschey/bubbleprompt/blob/main/prompt.go#L93>)
 
 ```go
 func MsgFilter(_ tea.Model, msg tea.Msg) tea.Msg
 ```
 
-## func [SetRenderer](<https://github.com/aschey/bubbleprompt/blob/main/prompt.go#L79>)
+## func [SetRenderer](<https://github.com/aschey/bubbleprompt/blob/main/prompt.go#L80>)
 
 ```go
 func SetRenderer(r renderer.Renderer, retainHistory bool) tea.Cmd
@@ -49,17 +49,18 @@ func SetRenderer(r renderer.Renderer, retainHistory bool) tea.Cmd
 type ExecutorFinishedMsg tea.Model
 ```
 
-## type [InputHandler](<https://github.com/aschey/bubbleprompt/blob/main/prompt.go#L22-L26>)
+## type [InputHandler](<https://github.com/aschey/bubbleprompt/blob/main/prompt.go#L22-L27>)
 
 ```go
 type InputHandler[T any] interface {
+    Init() tea.Cmd
     Update(msg tea.Msg) (InputHandler[T], tea.Cmd)
     Execute(input string, prompt *Model[T]) (tea.Model, error)
     Complete(prompt Model[T]) ([]suggestion.Suggestion[T], error)
 }
 ```
 
-## type [Model](<https://github.com/aschey/bubbleprompt/blob/main/prompt.go#L28-L40>)
+## type [Model](<https://github.com/aschey/bubbleprompt/blob/main/prompt.go#L29-L41>)
 
 ```go
 type Model[T any] struct {
@@ -67,25 +68,25 @@ type Model[T any] struct {
 }
 ```
 
-### func [New](<https://github.com/aschey/bubbleprompt/blob/main/prompt.go#L42-L46>)
+### func [New](<https://github.com/aschey/bubbleprompt/blob/main/prompt.go#L43-L47>)
 
 ```go
 func New[T any](inputHandler InputHandler[T], textInput input.Input[T], opts ...Option[T]) Model[T]
 ```
 
-### func \(Model\[T\]\) [Init](<https://github.com/aschey/bubbleprompt/blob/main/prompt.go#L100>)
+### func \(Model\[T\]\) [Init](<https://github.com/aschey/bubbleprompt/blob/main/prompt.go#L101>)
 
 ```go
 func (m Model[T]) Init() tea.Cmd
 ```
 
-### func \(Model\[T\]\) [Renderer](<https://github.com/aschey/bubbleprompt/blob/main/prompt.go#L70>)
+### func \(Model\[T\]\) [Renderer](<https://github.com/aschey/bubbleprompt/blob/main/prompt.go#L71>)
 
 ```go
 func (m Model[T]) Renderer() renderer.Renderer
 ```
 
-### func \(\*Model\[T\]\) [SuggestionManager](<https://github.com/aschey/bubbleprompt/blob/main/prompt.go#L62>)
+### func \(\*Model\[T\]\) [SuggestionManager](<https://github.com/aschey/bubbleprompt/blob/main/prompt.go#L63>)
 
 ```go
 func (m *Model[T]) SuggestionManager() suggestion.Manager[T]
@@ -97,7 +98,7 @@ func (m *Model[T]) SuggestionManager() suggestion.Manager[T]
 func (m Model[T]) SuggestionOffset() int
 ```
 
-### func \(Model\[T\]\) [TextInput](<https://github.com/aschey/bubbleprompt/blob/main/prompt.go#L66>)
+### func \(Model\[T\]\) [TextInput](<https://github.com/aschey/bubbleprompt/blob/main/prompt.go#L67>)
 
 ```go
 func (m Model[T]) TextInput() input.Input[T]
@@ -109,7 +110,7 @@ func (m Model[T]) TextInput() input.Input[T]
 func (m Model[T]) Update(msg tea.Msg) (tea.Model, tea.Cmd)
 ```
 
-### func \(Model\[T\]\) [View](<https://github.com/aschey/bubbleprompt/blob/main/prompt.go#L104>)
+### func \(Model\[T\]\) [View](<https://github.com/aschey/bubbleprompt/blob/main/prompt.go#L105>)
 
 ```go
 func (m Model[T]) View() string
